@@ -2191,6 +2191,12 @@ void SCIPstoreSolutionGap(
    SCIP*                 scip                /**< SCIP data structure */
    );
 
+/** recomputes and returns the primal dual gap stored in the stats */
+SCIP_EXPORT
+SCIP_Real SCIPgetPrimalDualIntegral(
+   SCIP*                 scip                /**< SCIP data structure */
+   );
+
 /**@} */
 
 #ifdef __cplusplus
