@@ -46,6 +46,7 @@ Interface changes
   the calls will be passed on.
 - SCIPmultiplyBySumExprSum(), SCIPpowerExprSum()
 - SCIPsetParam()
+- SCIPgetPrimalDualIntegral() returns the primal dual integral stored in the statistics
 
 ### Command line interface
 
